css/site.css
html,
body {
    height: 100%;
    overflow: auto;
    overflow: initial;
}

body {
    display: flex;
    flex-direction: column;
}

.content {
    flex: 1 0 auto;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

footer {
    flex-shrink: 0;
}

.bgimage {
    width: 100%;
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/GridBG.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
}

.heroText {
    font-family: 'Righteous', sans-serif;
    text-transform: uppercase;
    font-weight: 400;
    font-style: normal;
    color: rgb(195, 255, 0);
}

ul {
    list-style: none;
}

.sticky-col {
    position: -webkit-sticky;
    position: sticky;
    background-color: dark;
    overflow-y: scroll;
}

.list-center {
    display: inline-block;
    text-align: left;
}

.sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
}

.icon-color {
    color: white;
}

.minWidth {
    min-width: 2.5rem;
}

.header-width {
    width: 100%;
}

.sidebar-wrapper {
    max-width: 100%;
    height: 75vh;
}

.scroll-sidebar {
    position: fixed;
    overflow-y: scroll;
    height: 75vh;
}

.nav-wrapper {
    position: absolute;
}

.nav-fixed {
    position: fixed;
    top: 1;
    overflow-y: scroll;
    width: 320px;
}

/* width */
::-webkit-scrollbar {
    width: 6px;
}

.scroll-sidebar::-webkit-scrollbar {
    width: 6px;
    display: none;
}

/* Track */
::-webkit-scrollbar-track {
    background: dark;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #6c757d;
    border-radius: 5rem;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #4d5358;
}

button {
    background: none;
    color: inherit;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: none;
}

.sidebar-width {
    width: inherit;
}

